@@ -942,7 +942,7 @@ AC_SUBST(SYSCONFIGDIR)
 LIBRPMRC_FILENAME="${RPMCONFIGDIR}/rpmrc"
 AC_DEFINE_UNQUOTED(LIBRPMRC_FILENAME, "$LIBRPMRC_FILENAME")
 AC_SUBST(LIBRPMRC_FILENAME)
-LIBRPMALIAS_FILENAME="${RPMCONFIGDIR}/rpmpopt"
+LIBRPMALIAS_FILENAME="${RPMCONFIGDIR}/rpmpopt-${VERSION}"
 AC_DEFINE_UNQUOTED(LIBRPMALIAS_FILENAME, "$LIBRPMALIAS_FILENAME")
 AC_SUBST(LIBRPMALIAS_FILENAME)
 FINDREQUIRES="${RPMCONFIGDIR}/find-requires"
